@@ -29,8 +29,8 @@ requires:
   List::MoreUtils: 0
   List::Util: 0
   Mo: 0
-  Mo::utils: 0.07
-  Mo::utils::Date: 0
+  Mo::utils: 0.26
+  Mo::utils::Date: 0.04
   Readonly: 0
   perl: 5.6.2
 resources:
