@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 use Mo qw(build is);
-use Mo::utils::Date qw(check_date check_date_order);
+use Mo::utils::Date 0.04 qw(check_date check_date_order);
 
 our $VERSION = 0.04;
 
